--- a/partials/instance.html
+++ b/partials/instance.html
@@ -10,7 +10,7 @@
     </div>
     <div class="right">
       <div class="header_tools">
-        <button ng-click="toggleToolPanel(instance)" class="btn icon right"><i class="icon-users"></i></button>
+        <button ng-click="toggleToolPanel(instance)" class="btn icon right"><i class="icon-info-circled-alt"></i></button>
       </div>
     </div>
   </header>
