--- a/jade_partials/instance.html.jade
+++ b/jade_partials/instance.html.jade
@@ -9,7 +9,7 @@ article(ng-init='instance.cap = -2')
     .right
       .header_tools
         button.btn.icon.right(ng-click='toggleToolPanel(instance)')
-          i.icon-users
+          i.icon-info-circled-alt
   .form_response
     .questions(ng-include='"partials/form_completed.html"')
     dl 
