--- a/partials/panel.html
+++ b/partials/panel.html
@@ -3,29 +3,23 @@
   <h1 ng-bind="panel" class="center"></h1>
 </header>
 <div class="content_wrapper">
-  <div ng-show="panel=='Create Question'" class="card padded">
-    <h3>Choose Question Type:</h3>
-    <ul class="btnset five_btns options">
-      <li ng-click="SelectQuestionType('binary', buildQuestion)" ng-class="{selected: buildQuestion.type == 'binary'}" class="btn">Yes/No</li>
-      <li ng-click="SelectQuestionType('rating', buildQuestion)" ng-class="{selected: buildQuestion.type == 'rating'}" class="btn">Rating</li>
-      <li ng-click="SelectQuestionType('freeText', buildQuestion)" ng-class="{selected: buildQuestion.type == 'freeText'}" class="btn">Text</li>
-      <li ng-click="SelectQuestionType('multipleChoice', buildQuestion)" ng-class="{selected: buildQuestion.type == 'multipleChoice'}" class="btn">Choice</li>
-      <li ng-click="SelectQuestionType('number', buildQuestion)" ng-class="{selected: buildQuestion.type == 'number'}" class="btn">Number</li>
-    </ul>
-    <input type="text" name="question_{{question.id}}" ng-model="buildQuestion.text" placeholder="Enter your question here."/>
+  <div ng-show="panel=='Create Question'">
+    <fieldset>
+      <custom-select options="questionTypeOptions" placeholder="Choose a question type" returnValue="buildQuestion.type"></custom-select>
+    </fieldset>
+    <fieldset>
+      <input type="text" name="question_{{question.id}}" ng-model="buildQuestion.text" placeholder="Enter your question here."/>
+    </fieldset>
     <div class="options">
-      <div ng-show="buildQuestion.type == 'binary'"></div>
-      <div ng-show="buildQuestion.type == 'rating'"></div>
-      <div ng-show="buildQuestion.type == 'freeText'"></div>
-      <div ng-show="buildQuestion.type == 'multipleChoice'">
+      <div ng-show="buildQuestion.type.id == 'multipleChoice'">
         <input id="limit" type="checkbox" name="limit" class="inline"/>
         <label for="limit" class="inline">Limit to one one response.</label>
-        <ul ng-show="buildQuestion.type == 'multipleChoice'" class="answers">
+        <ul class="answers">
           <li ng-repeat="answer in buildQuestion.answers">
             <input type="text" ng-model="answer.text" placeholder="add an answer here."/>
           </li>
         </ul>
-        <button ng-click="addAnswer('',buildQuestion.answers)" class="btn">+ Answer</button>
+        <button ng-click="addAnswer('',buildQuestion.answers)" class="btn soft">+ Answer</button>
       </div>
     </div>
   </div>
