--- a/partials/user_info.html
+++ b/partials/user_info.html
@@ -1,1 +1,16 @@
-<header class="app_header"><a href="#/campaign/{{campaignId}}/contacts" class="btn icon left"><i class="icon-left-open"></i>back</a><h1>{{title}}</h1></header><div class="scroller_wrapper with_header_padding"><section class="scroller"><h2 ng-bind="viewReward.title"></h2><dl><dt>Name:</dt><dd ng-bind="viewUser.name"></dd><ul><li ng-repeat="convo in convoList">{{convo.text}}</li></ul></dl></section></div>
+
+<header class="app_header"><a href="#/campaign/{{campaignId}}/contacts" class="btn icon left"><i class="icon-left-open"></i>back</a>
+  <h1>{{title}}</h1>
+</header>
+<div class="scroller_wrapper with_header_padding">
+  <section class="scroller">
+    <h2 ng-bind="viewReward.title"></h2>
+    <dl>
+      <dt>Name:</dt>
+      <dd ng-bind="viewUser.name"></dd>
+      <ul>
+        <li ng-repeat="convo in convoList">{{convo.text}}</li>
+      </ul>
+    </dl>
+  </section>
+</div>
