--- a/partials/campaign.html
+++ b/partials/campaign.html
@@ -10,11 +10,11 @@
 <div ng-if="campaignNav_true" ng-click="toggleNavbar(false)" ng-class="{dropdown_dimmer : campaignNav_true}" class="dimmer"></div>
 <nav ng-if="campaignNav_true" ng-click="toggleNavbar()" class="campaign_nav dropdown">
   <ul>
-    <li ng-hide="currentPage == &quot;/conversations&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
-    <li ng-hide="currentPage == &quot;/analytics&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
-    <li ng-hide="multipleViewCampaigns || currentPage == &quot;/edit&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/edit">Edit<i class="icon-pencil"></i></a></li>
-    <li ng-hide="currentPage == &quot;/rewards&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">Bonuses<i class="icon-trophy"></i></a></li>
-    <li ng-hide="currentPage == &quot;/contacts&quot;"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">Contacts<i class="icon-at"></i></a></li>
+    <li ng-hide="currentPage == &quot;/conversations&quot;" class="feed"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/conversations">Conversation Feed<i class="icon-chat"></i></a></li>
+    <li ng-hide="currentPage == &quot;/analytics&quot;" class="analytics"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/analytics">Analytics<i class="icon-chart-bar"></i></a></li>
+    <li ng-hide="multipleViewCampaigns || currentPage == &quot;/edit&quot;" class="edit"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/edit">Edit<i class="icon-pencil"></i></a></li>
+    <li ng-hide="currentPage == &quot;/rewards&quot;" class="bonuses"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/rewards">Bonuses<i class="icon-trophy"></i></a></li>
+    <li ng-hide="currentPage == &quot;/contacts&quot;" class="contacts"><a href="#/account/{{accountId}}/campaign/{{campaignId}}/contacts">Contacts<i class="icon-at"></i></a></li>
   </ul>
 </nav>
 <ui-view class="campaign_view fade"></ui-view>
